@@ -1,7 +1,6 @@
-name: No Bots
+name: 'No Bots'
 type: module
 description: 'Blocks (well-behaved) search engine robots from crawling, indexing, or archiving your site.'
-version: 8.x-1.0
-core: 8.x
-core_version_requirement: ^8 || ^9
+version: 8.x-2.0
+core_version_requirement: '^8.8 || ^9'
 package: Stanford
